fix: overflow in advantages item

--- a/styles/advantages.css
+++ b/styles/advantages.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 3vw;
+  gap: 2.9vw;
 }
 
 .advantages__item {
